Deployable as a docker image

--- a/ASPServiceCore/Properties/launchSettings.json
+++ b/ASPServiceCore/Properties/launchSettings.json
@@ -25,7 +25,7 @@
     },
     "Docker": {
       "commandName": "Docker",
-      "launchBrowser": false,
+      "launchBrowser": true,
       "launchUrl": "{Scheme}://{ServiceHost}:{ServicePort}"
     }
   }
